--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,25 @@
+body{
+    background-color: green;
+}
+
 .navbar{
     padding: 10px;
     grid-area: uno;
-    background-color: aqua;
+    background-color: greenyellow;
     
 }
 
 .secciónbusqueda{
     grid-area: dos;
     padding: 10px;
-    background-color: aquamarine;
+    background-color: rgb(155, 215, 64);
 }
 
 .secciónprincipal{
     grid-area: tres;
     padding: 10px;
-    background-color: blanchedalmond;
+    background-color: rgb(125, 181, 42);
+
 }
 
 .secciónprincipal img{
@@ -25,14 +30,38 @@
 
 
 
+.card{
+    border: solid 1px black;
+    width: 180px;
+    height: 250px;
+    
+
+}
+
+.numeros{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2px;
+    padding: 2px;
+    font-weight: 40px;
+}
+
+.numeros div{
+    border: solid black 1px;
+}
+
+
+
 .piedepágina{
     grid-area: cuatro;
     padding: 10px;
-    background-color: azure;
+    background-color: rgb(112, 141, 68);
 }
 
 .boxprincipal{
     display: grid;
+    border-radius: black 2px;
     grid-template-columns: auto auto auto;
     grid-template-areas: 
     'uno dos dos'
@@ -42,6 +71,8 @@
     ;
 
 }
+
+
 
 
 
@@ -69,4 +100,22 @@ ul li{
     align-items: center;
     justify-content: center;
     gap: 5px;
+}
+
+@media (max-width:576px) {
+    .boxprincipal{
+        display: grid;
+        border: solid black 1px;
+        grid-template-columns: auto auto auto;
+        grid-template-areas: 
+        'uno'
+        'dos'
+        'tres'
+        'cuatro'
+        ;
+    }
+
+    
+
+
 }
